--- a/src/app/Components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/Components/action-cell-renderer/action-cell-renderer.component.html
@@ -9,6 +9,7 @@
     @if(params.data.ddccount>0){
     <span
       class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info"
+      title="Driver Defence Course"
     >
       {{ params.data.ddccount }}
       <span class="visually-hidden">unread messages</span>
