--- a/src/app/Pages/adddriver/adddriver.component.html
+++ b/src/app/Pages/adddriver/adddriver.component.html
@@ -203,25 +203,15 @@
           />
         </div>
         <div class="col-lg-3 col-md-4 col-sm-12 mt-2">
-          <label class="label ms-1" for="permit">Permit #</label>
+          <label class="label ms-1" for="medical">Medical Expiry</label>
           <input
             class="form-control form-control-sm"
-            id="permit"
-            type="text"
-            placeholder="CONT-2892"
-            formControlName="permitnumber"
-          />
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-12 mt-2">
-          <label class="label ms-1" for="permitissue">Permit IssueDate</label>
-          <input
-            class="form-control form-control-sm"
-            id="permitissue"
+            id="medical"
             type="date"
-            placeholder="Quality Control"
-            formControlName="permitissue"
+            formControlName="medicalexpiry"
           />
         </div>
+
         <div class="col-lg-3 col-md-4 col-sm-12 mt-2">
           <label class="label ms-1" for="blood">Blood Groups</label>
           <select
