--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -29,7 +29,7 @@
             type="text"
             class="form-control form-control-sm"
             formControlName="name"
-            placeholder="Load-33/2425"
+            placeholder="CNTT-20251201-1"
           />
           @if (name?.invalid && (name?.dirty || name?.touched)) {
           <div class="text-danger">
@@ -39,18 +39,18 @@
           </div>
           }
         </div>
-        <label for="courceTitle" class="col-sm-1 col-form-label mt-2"
+        <label for="courceTitle" class="col-sm-1 col-form-label mt-2 required"
           >Course Title:</label
         >
         <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
           <select
             class="form-select form-select-sm"
             id="courceTitle"
-            formControlName="cource"
+            formControlName="courseid"
           >
             <option disabled selected value="null">-----Select-----</option>
-            @for (item of cources(); track $index) {
-            <option [value]="item">{{ item }}</option>
+            @for (item of courses(); track $index) {
+            <option [value]="item.id">{{ item.name }}</option>
             }
           </select>
         </div>
@@ -61,11 +61,11 @@
           <select
             class="form-select form-select-sm"
             id="category"
-            formControlName="category"
+            formControlName="categoryid"
           >
             <option disabled selected value="null">-----Select-----</option>
             @for (item of categories(); track $index) {
-            <option [value]="item">{{ item }}</option>
+            <option [value]="item.id">{{ item.name }}</option>
             }
           </select>
         </div>
@@ -157,7 +157,7 @@
             formControlName="contractorid"
           >
             <option disabled selected value="null">-----Select-----</option>
-            @for (item of contractors(); track $index) {
+            @for (item of filteredContractors(); track $index) {
             <option [value]="item.id">{{ item.name }}</option>
             }
           </select>
