--- a/src/app/Pages/driverdetail/driverdetail.component.html
+++ b/src/app/Pages/driverdetail/driverdetail.component.html
@@ -328,7 +328,18 @@
                 name="permitexpiry"
                 class="form-control form-control-sm"
                 formControlName="permitexpiry"
-                placeholder="mm/dd/yyyy"
+              />
+            </div>
+            <label for="medicalexpiry" class="col-sm-1 col-form-label"
+              >Medical Expiry:</label
+            >
+            <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
+              <input
+                id="medicalexpiry"
+                type="date"
+                name="medicalexpiry"
+                class="form-control form-control-sm"
+                formControlName="medicalexpiry"
               />
             </div>
             <label for="bloodgroup" class="col-sm-1 col-form-label"
@@ -467,7 +478,7 @@
             <label for="comment" class="col-sm-1 col-form-label"
               >Comment:</label
             >
-            <div class="col-lg-11 col-md-11 col-sm-11 mt-2">
+            <div class="col-lg-7 col-md-11 col-sm-11 mt-2">
               <textarea
                 id="comment"
                 name="comment"
