--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -1,1 +1,103 @@
-<p>trainingsreport works!</p>
+<div class="container-fluid margintop">
+  <hr />
+  <div class="row">
+    <div class="col-auto">
+      <img
+        src="img/report.jpg"
+        alt="TrainingReport"
+        width="180px"
+        height="180px"
+      />
+    </div>
+    <div class="col-auto">
+      <h2>Training Reports</h2>
+      <p>You can download report by selection:</p>
+    </div>
+  </div>
+  <hr />
+
+  <div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-75 text-white">
+          <h5 class="card-title">Training Report</h5>
+          <p class="card-text">
+            <select class="form-select form-select-sm" id="driverexpiry2">
+              <option selected>-----Select-----</option>
+            </select>
+          </p>
+          <p class="card-text">
+            <button class="btn btn-primary" title="Export">
+              <i class="fa-solid fa-file-excel"></i> Export
+            </button>
+            <button class="btn btn-secondary ms-1" title="Reset Filter">
+              <i class="fa-solid fa-broom"></i> Reset
+            </button>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-75 text-white">
+          <h5 class="card-title">Training Report</h5>
+          <p class="card-text">
+            <select class="form-select form-select-sm" id="driverexpiry2">
+              <option selected>-----Select-----</option>
+            </select>
+          </p>
+          <p class="card-text">
+            <button class="btn btn-primary" title="Export">
+              <i class="fa-solid fa-file-excel"></i> Export
+            </button>
+            <button class="btn btn-secondary ms-1" title="Reset Filter">
+              <i class="fa-solid fa-broom"></i> Reset
+            </button>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-75 text-white">
+          <h5 class="card-title">Training Report</h5>
+          <p class="card-text">
+            <select class="form-select form-select-sm" id="driverexpiry3">
+              <option selected>-----Select-----</option>
+            </select>
+          </p>
+          <p class="card-text">
+            <button class="btn btn-primary" title="Export">
+              <i class="fa-solid fa-file-excel"></i> Export
+            </button>
+            <button class="btn btn-secondary ms-1" title="Reset Filter">
+              <i class="fa-solid fa-broom"></i> Reset
+            </button>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-75 text-white">
+          <h5 class="card-title">Training Report</h5>
+          <p class="card-text">
+            <select class="form-select form-select-sm" id="driverexpiry4">
+              <option selected>-----Select-----</option>
+              <option value="To be built">To be built</option>
+            </select>
+          </p>
+          <p class="card-text">
+            <button class="btn btn-primary" title="Export ">
+              <i class="fa-solid fa-file-excel"></i> Export
+            </button>
+            <button class="btn btn-secondary ms-1" title="Reset Filter">
+              <i class="fa-solid fa-broom"></i> Reset
+            </button>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr />
+</div>
