--- a/src/app/Components/taction-cell-renderer/taction-cell-renderer.component.css
+++ b/src/app/Components/taction-cell-renderer/taction-cell-renderer.component.css
@@ -10,3 +10,7 @@
   padding: 4px 8px; /* Smaller padding */
   font-size: 12px; /* Adjust font size */
 }
+.small-badge {
+  font-size: 10px; /* Smaller font for the badge */
+  padding: 2px 5px; /* Adjust badge size */
+}
